require environment_id for route and app config queries
