# api/openapi/swagger.json
@@ -22,13 +22,15 @@
                         "type": "string",
                         "description": "Application ID",
                         "name": "application_id",
-                        "in": "query"
+                        "in": "query",
+                        "required": true
                     },
                     {
                         "type": "string",
                         "description": "Environment ID",
                         "name": "environment_id",
-                        "in": "query"
+                        "in": "query",
+                        "required": true
                     },
                     {
                         "type": "string",
@@ -1138,7 +1140,15 @@
                         "type": "string",
                         "description": "Application ID",
                         "name": "application_id",
-                        "in": "query"
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Environment ID",
+                        "name": "environment_id",
+                        "in": "query",
+                        "required": true
                     },
                     {
                         "type": "string",
